Final Update index.html

--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                             <span class="detail-value">Office, Google Workspace, ИИ</span>
                         </div>
                     </div>
-                    <div class="price"></div>
+                    <div class="price">Уточнить стоимость</div>
                     <button class="register-btn" onclick="registerCourse()">Записаться</button>
                 </div>
 
@@ -664,7 +664,7 @@
                             <span class="detail-value">Групповые занятия</span>
                         </div>
                     </div>
-                    <div class="price"></div>
+                    <div class="price">Уточнить стоимость</div>
                     <button class="register-btn" onclick="registerCourse()">Записаться</button>
                 </div>
 
